package org.jianxiong.core;

/**
 * @EnumName: SceneType
 * @Description: 各类场景（小，大战场及武将单挑）
 * @Author BsKPLu
 * @Date 2025/5/11
 * @Version 1.1
 */

public enum SceneType {
    LARGE_BATTLEFIELD, // 大战场
    SMALL_BATTLEFIELD, // 小战场
    DUEL_SCENE         // 武将单挑场景
}

