package org.jianxiong.core;

/**
 * @EnumName: WeatherType
 * @Description: 天气情况
 * @Author BsKPLu
 * @Date 2025/5/11
 * @Version 1.1
 */
public enum WeatherType {
    SUNNY,
    FOGGY,
    RAINY
}
